app/assets/stylesheets/review.scss
@mixin diff-pre-block {
  white-space: pre;
      display: block;
}

// - - - - - - - - - - - - - - - - - - - - - - - - - - -

.no-title .ui-dialog-titlebar { display: none; }

#review-page {

  margin: { top: 15px; left: 35px; }
  @include non-code-font();
     padding: none;
  background: $darker-color;
       color: $lighter-color;

  .left-column { width: 295px; }

  #review-avatar-image-box, #resume-button-box {
    display: inline;
    vertical-align: top;
    float: left;
    margin-right: 4px;
  }

  img.avatar-image {
    @include rounded-corner(6px);
     width: 30px;
    height: 30px;
    margin: 0px;
  }

  #resume-button {
    @include non-code-font();
    @include font-size-medium();
        margin: 0px;
       padding: { top:0px; bottom:2px; left:8px; right:8px; }
    text-align: center;
  }

  #review-traffic-lights {
       display: flex;
         float:left;
        margin: 0px;
         width: 799px;
    overflow-x: auto;
    overflow-y: hidden;
    &::-webkit-scrollbar:horizontal { height: 0px; }
    .diff-traffic-light {
      padding: 0px;
       margin: 0px;
       cursor: pointer;
      img.with-bar-gap {
        width: 22px;
        height: 29px;
        position: relative; // move down slightly to align vertically
        top: 2px;           // with < > navigator triangle buttons
      }
    }
  }

  #review-index-box {
    #index-number {
      width: 28px;
      padding: { left: 5px; right: 5px; }
       font-size: 22px;
      text-align: center;
    }
  }
  #prev-index img, #next-index img {
    @include rounded-corner(4px);
       width: 18px;
      height: 18px;
     padding: 0px;
  }

  #prev-index {
    position: relative; // move right to align vertically
    right: -4px;        // with line-numbers gutter
  }

  #diff-checkbox-container {
    @include edged-panel();
    width: 55px;
    padding: { top: 5px; bottom: 2px; }
    #diff-checkbox-title {
       font-size: 14px;
         display: inline;
        position: relative; bottom: 2px;
    }
    margin: { top: 5px; }
  }

  .triangle.button {
    width: 28px;
    height: 28px;
    padding: 0px;
    border: 1px solid lighten($darker-color,6%);
    &:hover { border: 1px dotted lighten($darker-color,20%); }
    &[disabled] {
      background: lighten($darker-color, 30%);
      &:hover { border: 1px solid lighten($darker-color,6%); }
    }
  }

  #diff-filenames {
    float: left;
    height: 490px;
    margin: { top: 8px; }
    overflow-x: auto; // make scrollbars invisible
    overflow-y: auto;
    &::-webkit-scrollbar:vertical { width: 0px; }
    &::-webkit-scrollbar:horizontal { height: 0px; }

    font-size: 11pt;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;

    .filename {
       height: 16px;
      padding: { left: 4px; top: 0px; bottom: 4px; }
       border: 1px solid $darker-color;
       margin: { bottom: 2px; }

           width: 220px;
       max-width: 220px;

      &[data-filename='stdout'] { margin-top: 20px; }
      &[data-filename='status'] { margin-bottom: 20px; }

      &:not(.selected):hover {
        background-color: lighten($darker-color,5%);
      }
    }
  }

  .diff-line-numbers, .diff-sheet {
    @include code-font();
    background: lighten($darker-color, 3%);
        height: 572px;
        margin: 0px;
       padding: 0px;
        cursor: default;
    ln { margin: { left : 4px; right: 3px; } font-weight: normal; }
    added, deleted, same { @include diff-pre-block; }
    added   { color: $diff-added-color; }
    deleted { color: $diff-deleted-color; }
    same    { color: $lighter-color; }
  }

  .diff-line-numbers {
         width: 40px;
        margin: { left: 2px; }
    text-align: right;
      overflow: hidden;
         color: lighten($darker-color, 10%);
        border: none;

    position: relative; // lose 1px gap to file-content
        left: 2px;

    border-top-left-radius: 5px;
    added   { &:after { content: '+'; } }
    deleted { &:after { content: '-'; } }
    same    { &:after { content: '='; } }
    same    { color: lighten($darker-color,20%); }
  }

  .diff-sheet {
         width: 855px;
    text-align: left;
    overflow-x: auto;
    overflow-y: auto;
    &::-webkit-scrollbar:vertical { width: 7px; }
    // If the horizontal scrollbar has any height you lose
    // the vertical scroll-alignment with the line-numbers.
    // So make the horizontal scrollbar invisible whilst
    // retaining its functionality.
    &::-webkit-scrollbar:horizontal { height: 0px; }
    outline: none;
     border: none;
    padding: { left: 2px; }
    added, deleted, same { padding-left: 3px; }
    :hover { background: lighten($darker-color,10%); }
  }

  .diff-deleted-line-count, .diff-added-line-count {
    @include rounded-corner(4px);
    @include right-align(0px);
    @include diff-line-count;
    color: $darker-color;
    border: 1px solid lighten($darker-color,6%);
    &:hover { border: 1px dotted lighten($darker-color,6%); }
    &[disabled]:hover { border: 1px solid lighten($darker-color,6%); }
    cursor: pointer;

    &.none {
      visibility: hidden;
    }

    &[disabled] {
      background: lighten($darker-color,10%);
      cursor: default;
    }

    &[data-filename='stdout'] { margin: {    top: 20px;  } }
    &[data-filename='status'] { margin: { bottom: 20px;  } }
  }

  .diff-deleted-line-count {
    background: $diff-deleted-color;
    &[disabled] { color: lighten($diff-deleted-color,5%); }
  }

  .diff-added-line-count {
    background: $diff-added-color;
    &[disabled] { color: lighten($diff-added-color,5%); }
  }

  .diff-added-line-count, .diff-deleted-line-count {
    &.on  { &:before { content: ' '; } }
    &.off { &:before { content: '*'; } }
  }

  #fork-button-box, #revert-button-box {
    display: inline-block;
  }

  #fork-button, #revert-button {
    @include non-code-font();
    @include rounded-corner(4px);
    text-align: left;
    font-size: 10px;
    margin: { top: 0px; bottom: 0px; right: 1px; }
    padding: { bottom: 1px; top: 1px; left: 9px; right: 9px; }
    position: relative;
    top: -3px;
  }
}

